# release-surface-scanner

./: .dockerignore  .env.example  AGENTS.md  MANIFEST.in  README.md  RELEASE_NOTES.md  USAGE.md  pyproject.toml
.github/workflows/: tests.yml
docs/brand/: README.md
examples/: demo.py
fixtures/sample_repo/: README.md  pyproject.toml
project-docs/: public-boundary.md
scripts/: check_public_surface.py
src/release_surface_scanner/: __init__.py  cli.py  models.py  proof.py  reporting.py  scanner.py
src/warden_release_assurance/: __init__.py  cli.py  models.py  proof.py  reporting.py
tests/: test_cli.py  test_proof_index.py  test_public_surface.py  test_scan.py
