[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warden-release-assurance"
version = "0.1.0"
description = "Public-safe release assurance scanner for required files, secret-shaped values, proof indexes, and handoff reports."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Zain Dana Harper" }]
keywords = ["release", "provenance", "public-surface", "ai-safety", "audit"]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0"]

[project.scripts]
warden-release = "warden_release_assurance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
