[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "release-surface-scanner"
version = "0.1.0"
description = "Turn a repo into a reviewable release packet: required files, .env exclusion, secret-shape detection, and per-file hashes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Zain Dana Harper" }]
keywords = ["release", "provenance", "public-surface", "ai-safety", "audit"]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0"]

[project.scripts]
release-scan = "release_surface_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
